--- a/pageturtle_core/templates/post.html
+++ b/pageturtle_core/templates/post.html
@@ -1,6 +1,6 @@
 {% extends "root.html" %}
 
-{% block title %}{{ title }} - Blog name{% endblock %}
+{% block title %}{{ title }} - {{ config.blog_title }}{% endblock %}
 
 {% block content %}
   <div class="flex flex-col items-center">
