--- a/pageturtle_core/templates/root.html
+++ b/pageturtle_core/templates/root.html
@@ -37,7 +37,7 @@
             {% endmatch %}
 
             {% if config.enable_rss %}
-              <a class="text-black font-bold hover:underline" href="{{ config.base_url }}/index.html">RSS</a>
+              <a class="text-black font-bold hover:underline" href="{{ config.base_url }}/atom.xml">RSS</a>
             {% endif %}
           </div>
         </div>
