--- a/pageturtle_core/templates/index.html
+++ b/pageturtle_core/templates/index.html
@@ -26,18 +26,11 @@
                  {{ p.description }}
                </p>
 
-               {% match p.post.metadata.tags %}
-                {% when Some with (tags) %}
-                  <div class="space-x-2 my-2">
-                    {% for tag in tags %}
-                      <span class="px-2 py-1 bg-gray-300 rounded-md">
-                        {{ tag }}
-                      </span>
-                    {% endfor %}
-                  </div>
-                {% when None %}
-               {% endmatch %}
-
+              <div class="space-x-4 my-2">
+                {% for tag in p.post.metadata.tags %}
+                  <span class="px-2 py-1 bg-gray-300 rounded-md"> {{ tag }} </span>
+                {% endfor %}
+              </div>
              </li>
            </a>
         </div>
