Parse post authors as list and remove syntect

--- a/pageturtle_core/templates/post.html
+++ b/pageturtle_core/templates/post.html
@@ -11,7 +11,7 @@
 
       <p>
         <span class="font-bold">
-          {{ post.post.metadata.author.as_ref().unwrap_or(config.author) }}
+          {{ authors }}
         </span> on {{ post.post.metadata.format_date() }}
       </p>
 
