Update spacing in table of contents

--- a/pageturtle_core/templates/toc-entry.html
+++ b/pageturtle_core/templates/toc-entry.html
@@ -1,6 +1,6 @@
-<ul>
+<ul class="!mb-1">
   <a href="#{{ anchor }}">
-    <li>
+    <li class="leading-4">
       {{ title }}
       {% for e in children %}
         {{ e }}
