--- a/pageturtle_core/templates/index.html
+++ b/pageturtle_core/templates/index.html
@@ -14,7 +14,7 @@
       <ul class="space-y-4 w-full">
         {% for p in posts %}
         <div class="p-2 rounded-md hover:bg-gray-100">
-           <a href="{{ config.base_url }}/{{ p.filename.display() }}">
+           <a href="{{ config.base_url }}/{{ p.output_filename.display() }}">
              <li>
                <span class="text-xl font-bold">{{ p.post.metadata.title }}</span>
 
